# Hydra-fullstack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  webscrapping_hydra.ipynb
data/outputs/: header_petr3.json  qualitativo_petr3.json
examples/: exemplo_input_header.json  exemplo_input_pesquisa.json
notebooks/: webscrapping_hydra.ipynb
pesquisa-acao/: README.md
scripts/: daily-cli.py  header-cli.py  pesquisa-cli.py
src/pesquisa_acao/: __init__.py  api.py  config.py  empresa_header.py
src/pesquisa_acao.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pesquisa_acao/pipelines/: pesquisa_acao.py  pesquisa_acao_daily_kpis.py
tests/: test_dates.py  test_end_to_end.py  test_gics.py  test_xbrl_companyfacts.py  test_yahoo_variants.py
